[package]
name = "TODOPROJNAME"
description = "TODO"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = [
    "Zarthus <zarthus@liefland.net>",
]
repository = "https://github.com/zarthus/TODOPROJNAME"
homepage = "https://github.com/zarthus/TODOPROJNAME"
categories = []
keywords = []
readme = "README.md"
publish = false

[dependencies]

[features]
default = [
]

[badges]
